# uv-monorepo

./: .dockerignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: docker.yaml  lint.yaml  release.yaml  test.yaml
docs/: gen_pages.py  index.md  taskfile.md  uv.md
monorepo/: Dockerfile  README.md  Taskfile.docker.yaml  Taskfile.docs.yaml  Taskfile.lint.yaml  Taskfile.python.yaml  Taskfile.test.yaml  Taskfile.tools.yaml  mkdocs.yaml  uv-release.yaml  uv_release.py
monorepo/semantic-release/: package-lock.json  package.json
src/services/service-a/: Dockerfile  package.json  pyproject.toml
src/services/service-a/service_a/: __init__.py  app.py  service_a.py
src/services/service-a/tests/: test_service_a.py
src/services/service-b/: Dockerfile  package.json  pyproject.toml
src/services/service-b/service_b/: __init__.py  app.py  service_b.py
src/services/service-b/tests/: test_service_b.py
