[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "package-a",
  "package-b",
  "fastapi>=0.115.0",
  "pydantic>=2.9.2",
  "uvicorn>=0.30.6"
]
dynamic = ["version"]
name = "service-a"
requires-python = ">=3.11,<4"

[tool.hatch.version]
path = "service_a/__init__.py"

[tool.uv]
dev-dependencies = [
  "hatch>=1.12.0",
  "pytest>=8.3.3",
  "coverage>=7.6.1",
  "httpx>=0.27.2",
  "mypy>=1.11.2"
]
